--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-3">
                 <div class = "lsheart my-5">
-                    <img src="assets/images/hearts.gif" alt="" class="img-fluid">
+                    <img src="./assets/images/hearts.gif" alt="" class="img-fluid">
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
                         <div class="cover-right" id="cover-right"></div>
                     </div>
                     <div class="card" id="card">
-                        <img  src="assets/images/pikachu-propose.gif" alt="cute pikachu"  class="pt-3" id="pikachu-propose">
+                        <img  src="./assets/images/pikachu-propose.gif" alt="cute pikachu"  class="pt-3" id="pikachu-propose">
                         <div class="text" id="text"> Will you be my Valentine ? </div>
                         <div class = "buttons pb-4">
                             <button id="yes">Yes</button>
@@ -50,7 +50,7 @@
              <!-- Right Side Heart Animation -->
             <div class="col-3">
                 <div class = "rsheart my-5">
-                    <img src="assets/images/hearts.gif" alt="" class="img-fluid">
+                    <img src="./assets/images/hearts.gif" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
