Solved image and audio issues by adding relative paths

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header class="">
         <div class="row">
-            <span> &nbsp; &nbsp; Made by Anuj Agarwal &nbsp; &nbsp; &nbsp; <a href="https://www.instagram.com/a___garwal/#"><img src="/assets/images/insta.webp" alt="isntagram" height="30px" srcset=""></a> &nbsp; &nbsp; &nbsp; <a href="https://www.linkedin.com/in/a---garwal/"><img src="/assets/images/linkedin.webp" alt="linkedin" height="30px" srcset=""></a></span>
+            <span> &nbsp; &nbsp; Made by Anuj Agarwal &nbsp; &nbsp; &nbsp; <a href="https://www.instagram.com/a___garwal/#"><img src="./assets/images/insta.webp" alt="instagram" height="30px" srcset=""></a> &nbsp; &nbsp; &nbsp; <a href="https://www.linkedin.com/in/a---garwal/"><img src="./assets/images/linkedin.webp" alt="linkedin" height="30px" srcset=""></a></span>
         </div>
     </header>
 
