replaced one gif

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="media.css">
     <link rel="preload" href="./assets/images/pikachu-propose.gif">
     <link rel="preload" href="./assets/images/pikachu-happy.gif">
-    <link rel="preload" href="./assets/images/pikachu-sad.gif">
+    <link rel="preload" href="./assets/images/pikachu-sad.jpg">
     <link rel="preload" href="./assets/images/pikachu-very-sad.gif">
     <link rel="preload" href="./assets/images/pikachu-very-very-sad.gif">
     <link rel="preload" href="./assets/images/insta.webp">
