--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
-    <link rel="preload" href="./assets/images/pikachu-propose.gif">
-    <link rel="preload" href="./assets/images/pikachu-happy.gif">
-    <link rel="preload" href="./assets/images/pikachu-sad.jpg">
-    <link rel="preload" href="./assets/images/pikachu-very-sad.gif">
-    <link rel="preload" href="./assets/images/pikachu-very-very-sad.gif">
-    <link rel="preload" href="./assets/images/insta.webp">
-    <link rel="preload" href="./assets/images/linkedin.webp">
+    <link rel="preload" href="pikachu-propose.gif">
+    <link rel="preload" href="pikachu-happy.gif">
+    <link rel="preload" href="pikachu-sad.jpg">
+    <link rel="preload" href="pikachu-very-sad.gif">
+    <link rel="preload" href="pikachu-very-very-sad.gif">
+    <link rel="preload" href="insta.webp">
+    <link rel="preload" href="linkedin.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Valentine's Day</title>
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header class="">
         <div class="row">
-            <span> &nbsp; &nbsp; Made by Anuj Agarwal &nbsp; &nbsp; &nbsp; <a href="https://www.instagram.com/a___garwal/#"><img src="./assets/images/insta.webp" alt="instagram" height="30px" srcset=""></a> &nbsp; &nbsp; &nbsp; <a href="https://www.linkedin.com/in/a---garwal/"><img src="./assets/images/linkedin.webp" alt="linkedin" height="30px" srcset=""></a></span>
+            <span> &nbsp; &nbsp; Made by Anuj Agarwal &nbsp; &nbsp; &nbsp; <a href="https://www.instagram.com/a___garwal/#"><img src="insta.webp" alt="instagram" height="30px" srcset=""></a> &nbsp; &nbsp; &nbsp; <a href="https://www.linkedin.com/in/a---garwal/"><img src="linkedin.webp" alt="linkedin" height="30px" srcset=""></a></span>
         </div>
     </header>
 
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-3">
                 <div class = "lsheart my-5">
-                    <img src="./assets/images/hearts.gif" alt="" class="img-fluid">
+                    <img src="hearts.gif" alt="" class="img-fluid">
                 </div>
             </div>
 
@@ -44,7 +44,7 @@
                         <div class="cover-right" id="cover-right"></div>
                     </div>
                     <div class="card" id="card">
-                        <img  src="./assets/images/pikachu-propose.gif" alt="cute pikachu"  class="pt-3" id="pikachu-propose">
+                        <img  src="pikachu-propose.gif" alt="cute pikachu"  class="pt-3" id="pikachu-propose">
                         <div class="text" id="text"> Will you be my Valentine ? </div>
                         <div class = "buttons pb-4">
                             <button id="yes">Yes</button>
@@ -57,7 +57,7 @@
              <!-- Right Side Heart Animation -->
             <div class="col-3">
                 <div class = "rsheart my-5">
-                    <img src="./assets/images/hearts.gif" alt="" class="img-fluid">
+                    <img src="hearts.gif" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
